gatekeeper_OPA_Rego_policy/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod-metadata
  labels:
    app: "nginx-app"        # Required label for the app
    environment: "production" # Required label for the environment
  annotations:
    team: "dev-team"        # Required annotation for the team
    owner: "dev-team"       # Required annotation for the owner
spec:
  containers:
    - name: nginx-container
      image: nginx:latest
