gatekeeper_OPA_Rego_policy/label-app-required-constrainttemplate.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8srequiredmetadata
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredMetadata
      validation:
        openAPIV3Schema:
          properties:
            annotations:
              type: array
              items:
                type: string
            labels:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package kubernetes.admission

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"

          # Check required annotations
          required_annotations := {a | a := input.parameters.annotations[_]}
          provided_annotations := {a | input.review.object.metadata.annotations[a]}
          missing_annotations := required_annotations - provided_annotations
          count(missing_annotations) > 0
          msg := sprintf("Missing annotations: %v", [missing_annotations])
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "Pod"

          # Check required labels
          required_labels := {l | l := input.parameters.labels[_]}
          provided_labels := {l | input.review.object.metadata.labels[l]}
          missing_labels := required_labels - provided_labels
          count(missing_labels) > 0
          msg := sprintf("Missing labels: %v", [missing_labels])
        }
